[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project]
name = "{{ cookiecutter.package_name }}"
author="{{ cookiecutter.author_name }}"
author_email="{{ cookiecutter.author_email }}"
description="{{ cookiecutter.description }}"
version = "0.0.1"
requires-python = ">=3.8"
dependencies = [
    "streamlit"
]
[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "flake8", "mypy"]
