[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project]
name = "{{ cookiecutter.package_name }}"
authors = [
    {name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"},
]
description="{{ cookiecutter.description }}"
readme = "README.md"
license = "{{ cookiecutter.open_source_license }}"
version = "0.0.1"
requires-python = ">=3.8"
dependencies = [
    "streamlit"
]
[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "flake8", "mypy"]
